syntax = "proto3";

package users;

option java_multiple_files = true;
option java_package = "com.example.usermicroservice";

option go_package = "github.com/stojic19/XWS-TIM15/JavaMicroservices/common/src/main/proto";

service UsersService{
  rpc AddUser(AddUserRequest) returns(AddUserResponse){
  }
  rpc UpdateUser(UpdateUserRequest) returns(UpdateUserResponse){
  }
  rpc GetUsers(GetUsersRequest) returns(GetUsersResponse){
  }
  rpc GetUser(GetUserRequest) returns(GetUserResponse){
  }
  rpc GetUserByUsername(GetUserByUsernameRequest) returns(GetUserResponse){
  }
  rpc DeleteUserById(GetUserRequest) returns(StringResponse){
  }
  rpc SearchPublicUsers(SearchRequest) returns(GetUsersResponse){
  }
  rpc UpdateInterests(UpdateInterestsRequest) returns(StringResponse){
  }
  rpc UpdateSkills(UpdateSkillsRequest) returns(StringResponse){
  }
  rpc UpdateWorkExperience(UpdateWorkExperienceRequest) returns(StringResponse){
  }
  rpc UpdateEducation(UpdateEducationRequest) returns(StringResponse){
  }
  rpc GetInterests(GetUserRequest) returns(GetInterestsResponse){
  }
  rpc GetSkills(GetUserRequest) returns(GetSkillsResponse){
  }
  rpc GetWorkExperience(GetUserRequest) returns(GetWorkExperienceResponse){
  }
  rpc GetEducation(GetUserRequest) returns(GetEducationResponse){
  }
}
message AddUserRequest{
  string username = 1;
  string password = 2;
  string name = 3;
  string email = 4;
  string telephoneNo = 5;
  string gender = 6;
  string dateOfBirth = 7;
  string biography = 8;
  bool isPrivate = 9;
}
message AddUserResponse{
  string response = 1;
}

message UpdateUserRequest{
  string username = 1;
  string password = 2;
  string name = 3;
  string email = 4;
  string telephoneNo = 5;
  string gender = 6;
  string dateOfBirth = 7;
  string biography = 8;
  string newUsername = 9;
  bool isPrivate = 10;
}
message UpdateUserResponse{
  string response = 1;
}

message GetUsersRequest{}
message GetUsersResponse{
  repeated User users = 1;
}

message GetUserRequest{
  string id = 1;
}
message GetUserResponse{
  User user = 1;
}

message User{
  string id = 1;
  string username = 2;
  string password = 3;
  string name = 4;
  string email = 5;
  string telephoneNo = 6;
  string gender = 7;
  string dateOfBirth = 8;
  string biography = 9;
  bool isPrivate = 10;
}

message GetUserByUsernameRequest{
  string username = 1;
}
message StringResponse{
  string response = 1;
}

message SearchRequest{
  string searchTerm = 1;
}
message WorkExperience{
  string companyName = 1;
  string jobTitle = 2;
  string startDate = 3;
  string endDate = 4;
}
message Education{
  string institutionType = 1;
  string institutionName = 2;
  string title = 3;
  double gpa = 4;
  string startDate = 5;
  string endDate = 6;
}
message UpdateWorkExperienceRequest{
  string userId = 1;
  repeated WorkExperience workExperiences = 2;
}
message UpdateEducationRequest{
  string userId = 1;
  repeated Education education = 2;
}
message UpdateInterestsRequest{
  string userId = 1;
  repeated string interests = 2;
}
message UpdateSkillsRequest{
  string userId = 1;
  repeated string skills = 2;
}
message GetWorkExperienceResponse{
  repeated WorkExperience workExperience = 1;
}
message GetEducationResponse{
  repeated Education education = 1;
}
message GetInterestsResponse{
  repeated string interests = 1;
}
message GetSkillsResponse{
  repeated string skills = 1;
}